--- a/app/views/layouts/_contentlist.html.erb
+++ b/app/views/layouts/_contentlist.html.erb
@@ -184,7 +184,10 @@
 
 			            	<% else %>
 
-				            	<button id="snapbtn" class="btn modaction">Snap to binder</button>
+				            	<button class="btn snapbtn">
+									<img src="/assets/binders/snap.png" />
+									<div class="texter">Snap</div>
+								</button>
 
 					        <% end %>
 
