--- a/app/assets/stylesheets/binders/folder.css
+++ b/app/assets/stylesheets/binders/folder.css
@@ -269,6 +269,10 @@
   line-height:13px;
 }
 
+#normcurs {
+  cursor:text !important;
+}
+
 #left-sidebar .conbox .empty-tog {
   color:#777;
   text-align:center;
@@ -1156,7 +1160,7 @@
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  z-index:99999999999999;
+  z-index:100;
 }
 
 .content-actions button {
@@ -1177,6 +1181,10 @@
   width:140px;
 }
 
+.content-actions button:disabled .texter {
+  width:160px;
+  color:#555;
+}
 
 
 
@@ -1184,6 +1192,27 @@
   -webkit-box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.);
     -moz-box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.1);
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.1); 
+}
+
+
+
+
+.snapbtn {
+  font-size: 14px;
+  font-weight:bolder;
+  color:#555;
+  margin-right:-2px;
+}
+
+.snapbtn img {
+  float:left;
+  height:24px;
+  margin-right:3px;
+}
+
+.snapbtn .texter {
+  padding-top:3px;
+  width:62px;
 }
 
 
