--- a/app/views/layouts/_show.html.erb
+++ b/app/views/layouts/_show.html.erb
@@ -56,7 +56,7 @@
                     <img src="/assets/binders/link.png" style="height:14px; margin-top:-4px" />
                   </span>
 
-                  <input type="text" onclick="$(this).select();" style="width:138px; margin-left:10px;background:#fff" value="<%= "#{request.protocol}#{request.host_with_port}#{request.fullpath}" %>" readonly />
+                  <input id="normcurs" type="text" onclick="$(this).select();" style="width:138px; margin-left:10px;background:#fff" value="<%= "#{request.protocol}#{request.host_with_port}#{request.fullpath}" %>" readonly="readonly" />
               </div>
 
             </div>
@@ -70,7 +70,7 @@
 
               <iframe allowtransparency="true" frameborder="0" scrolling="no" src="//platform.twitter.com/widgets/tweet_button.html?count=none&text=Love this! <%= CGI.escape(@binder.title) %>&url=<%= URI.encode("#{request.protocol}#{request.host_with_port}#{request.fullpath}") %>" style="width:55px; height:20px; margin-top:1px; float:left"></iframe>
 
-              <iframe src="//www.facebook.com/plugins/like.php?href=<%= URI.encode("#{request.protocol}#{request.host_with_port}#{request.fullpath}") %>&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=90&amp;appId=213954741999891" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:55px; height:25px; margin:-1px 0 0 8px; float:left" allowTransparency="true"></iframe>
+              <iframe src="//www.facebook.com/plugins/like.php?href=<%= URI.encode("#{request.protocol}#{request.host_with_port}#{request.fullpath}") %>&send=false&layout=standard&width=450&show_faces=true&action=like&colorscheme=light&font&height=90" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:55px; height:25px; margin:-1px 0 0 8px; float:left" allowTransparency="true"></iframe>
 
             </div>
 
@@ -457,6 +457,76 @@
 
     </form>
   </div>
+
+
+
+
+
+
+   <div id="snap-form" style="display:none">
+    <div class="headtitle">
+      Snap to binder
+    </div>
+
+    <div class="errorBox"></div>
+
+    <form action="#" class="bodcon">
+      <div class="conitem">
+
+        <div class="fol-picker" style="margin-bottom:10px">
+
+          <div class="togbar" onclick="togglePicker(this)">
+            <span class="chosenTitle">
+              <i>Choose a binder or folder to snap this to</i>
+            </span>
+            <div class="down-arrow"></div>
+            <input type="hidden" name="folid" class="chosenOne" value="" />
+          </div>
+
+          <div class="pickerpane">
+
+            <% if !@root.nil? %>
+            <% @root.each do |binder| %>
+
+
+              <% if binder.parent["id"] == "0" %>
+
+                <div class="bndr">
+
+                  <div class="dir" folid="<%= binder.id.to_s %>" turl="<%= named_binder_route(binder) %>">
+                    <div class="arrow-right" onclick="togglePickFolder(this)"></div>
+                    <span class="dirtitle" onclick="selectPickFolder(this)">
+                      <img src="/assets/binders/folder.png" class="foldicon" />
+                      <%= binder.title %>
+                    </span>
+                    <div class="dirWrap"></div>
+
+                  </div>
+                </div>
+
+              <% end %>
+
+            <% end %>
+            <% end %>
+
+
+          </div>
+        </div>
+
+
+
+      </div>
+
+      <div class="buttonbar">
+         <button class="btn btn-primary showloader" type="submit">Snap this!</button>
+         <button class="btn" type="reset" onClick="closefBox()">Cancel</button>
+      </div>
+
+    </form>
+  </div>
+
+
+
 
 
 
