--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -7,54 +7,54 @@
 
 <%= javascript_tag "username = \"#{current_teacher.username}\"" %>
 
+<% if signed_in? && current_teacher.getting_started %>
+	<div class="starting-section">
+		<div class="container">
 
-<div class="starting-section">
-	<div class="container">
+			<div class="headtitle">
+				Welcome home! Here are a few things to get started with:
+			</div>
 
-		<div class="headtitle">
-			Welcome home! Here are a few things to get started with:
+			<div class="listbox">
+
+
+				<div class="listitem">
+					<div class="numbul">1</div> 
+					<div class="linker">
+						<a id="task4" onclick="wizardFocus(4)">Subscribe to your favorite colleagues, educators and organizations</a>
+					</div>
+				</div>
+
+				<div class="listitem">
+					<div class="numbul">2</div>
+					<div class="linker">
+						<a id="task2" onclick="wizardFocus(2)">Create a binder</a>
+					</div>
+				</div>
+
+				<div class="listitem">
+					<div class="numbul">3</div>
+					<div class="linker">
+						<a id="task3" onclick="wizardFocus(3)">Snap another teacher's lesson into your binder</a>
+					</div>
+				</div>
+
+				<div class="listitem">
+					<div class="numbul">4</div> 
+					<div class="linker">
+						<a id="task1" onclick="wizardFocus(1)">Edit your profile information</a>
+					</div>
+				</div>
+
+
+			</div>
+
+
+
+			<button class="btn btn-large finishbtn">✓ I'm finished getting started</button>
 		</div>
-
-		<div class="listbox">
-
-
-			<div class="listitem">
-				<div class="numbul">1</div> 
-				<div class="linker">
-					<a id="task4" onclick="wizardFocus(4)">Subscribe to your favorite colleagues, educators and organizations</a>
-				</div>
-			</div>
-
-			<div class="listitem">
-				<div class="numbul">2</div>
-				<div class="linker">
-					<a id="task2" onclick="wizardFocus(2)">Create a binder</a>
-				</div>
-			</div>
-
-			<div class="listitem">
-				<div class="numbul">3</div>
-				<div class="linker">
-					<a id="task3" onclick="wizardFocus(3)">Snap another teacher's lesson into your binder</a>
-				</div>
-			</div>
-
-			<div class="listitem">
-				<div class="numbul">4</div> 
-				<div class="linker">
-					<a id="task1" onclick="wizardFocus(1)">Edit your profile information</a>
-				</div>
-			</div>
-
-
-		</div>
-
-
-
-		<button class="btn btn-large finishbtn">✓ I'm finished getting started</button>
 	</div>
-</div>
-
+<% end %>
 
 
 <div class="container">
