getting started wired

--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -15,11 +15,11 @@
 					</div>
 
 					<div class="connectbtns">
-						<a href="#" class="zocial twitter">Connect with Twitter</a>
+						<a href="/gs/twitter" class="zocial twitter">Connect with Twitter</a>
 					</div>
 
 					<div class="connectbtns">
-						<a href="#" class="zocial facebook">Connect with Facebook</a>
+						<a href="/gs/facebook" class="zocial facebook">Connect with Facebook</a>
 					</div>
 
 				</div>
