--- a/app/assets/stylesheets/binders/folder.css
+++ b/app/assets/stylesheets/binders/folder.css
@@ -1189,7 +1189,7 @@
 
 
 .actions-float {
-  -webkit-box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.);
+  -webkit-box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.1);
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.1); 
 }
