commented out favorites, fixed send button css

--- a/app/assets/stylesheets/messages/main.css
+++ b/app/assets/stylesheets/messages/main.css
@@ -211,6 +211,11 @@
   width: 700px;
 }
 
+.mainbox .replywrap form{
+  margin: 0 0 0 0;
+
+}
+
 .mainbox .replybox {
   border-top:1px solid #ddd;
   position:relative;
