--- a/app/views/layouts/_embed.html.erb
+++ b/app/views/layouts/_embed.html.erb
@@ -55,12 +55,12 @@
 
 <div class="actionswrap">
 	<div class="content-actions">
-
+<% if false %>
 		<button id="favbtn" class="btn">
 			<img src="/assets/binders/fav.png" />
 			<div class="texter">Add to favorites</div>
 		</button>
-
+<% end %>
 		<button id="snapbtn" class="btn">
 			<img src="/assets/binders/snap.png" />
 			<div class="texter">Snap to binder</div>
