--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -15,11 +15,19 @@
 					</div>
 
 					<div class="connectbtns">
-						<a href="/gs/twitter" class="zocial twitter">Connect with Twitter</a>
+						<% if current_teacher.omnihash["twitter"].nil? %>
+							Connected with Twitter!
+						<% else %>
+							<a href="/gs/twitter" class="zocial twitter">Connect with Twitter</a>
+						<% end %>
 					</div>
 
 					<div class="connectbtns">
-						<a href="/gs/facebook" class="zocial facebook">Connect with Facebook</a>
+						<% if current_teacher.omnihash["facebook"].nil? %>
+							Connected with Facebook!
+						<% else %>
+							<a href="/gs/facebook" class="zocial facebook">Connect with Facebook</a>
+						<% end %>
 					</div>
 
 				</div>
