--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -79,14 +79,14 @@
 			&nbsp;&nbsp;&nbsp;Create a new binder
 		</button>
 
-
+<% if false %>
 		<div style="margin-top:30px;font-size:13px; font-weight:bolder">
 			<a href="#">
 			<%= image_tag('binders/fav.png', :style => "float:left; margin-right:5px;width:22px;height:22px;margin-top:-2px") %>
-			Your Favorites (23)
+			Your Favorites (<%= Binder.where(:owner => current_teacher.id.to_s).favorites.count %>)
 			</a>
 		</div>
-
+<% end %>
 	</div>
 
 	<div id="paneright">
