--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -48,7 +48,7 @@
 		</tr>
 	</table>
 
-	<div style="color:#666;font-size:11px;margin-left:145px">You agree to our <a href="http://www.classconnect.com/legal/tos" target="_blank">terms of service</a></div>
+	<div style="color:#666;font-size:11px;margin-left:145px">You agree to our <a href="/tos.html" target="_blank">terms of service</a></div>
 
 	<button type="submit" class="btn btn-primary btn-large" style="font-weight:bolder; margin-top:10px; margin-left:117px; width:220px">
 		Sign up!
