--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -38,16 +38,36 @@
 					</div>
 
 					<div class="imghold">
-						<img src="http://img.cla.co/95646e3ba333f6c808e7e25092708789/thumb_md.png" />
-						<img src="http://img.cla.co/d1a54b8f36e8bb677aa654b84b162961/thumb_md.png" />
-						<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" />
-						<img src="http://img.cla.co/d1a54b8f36e8bb677aa654b84b162961/thumb_md.png" />
-						<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" />
-						<img src="http://img.cla.co/d1a54b8f36e8bb677aa654b84b162961/thumb_md.png" />
-						<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" />
-						<img src="http://img.cla.co/d1a54b8f36e8bb677aa654b84b162961/thumb_md.png" />
-						<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" />
-						<img src="http://img.cla.co/d1a54b8f36e8bb677aa654b84b162961/thumb_md.png" />
+						<a href = "/NASA">
+							<img src="http://img.cla.co/95646e3ba333f6c808e7e25092708789/thumb_md.png" />
+						</a>
+						<a href = "/eric">
+							<img src="http://img.cla.co/d1a54b8f36e8bb677aa654b84b162961/thumb_md.png" />
+						</a>
+						<a href = "/klienerin">
+							<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" />
+						</a>
+						<a href = "/ronpeck">
+							<img src="http://img.cla.co/10cb1f329fecea51133aae6c8dc4e53e/thumb_md.png" />
+						</a>
+						<a href = "/mrsmorgansclass">
+							<img src="http://img.cla.co/d5b10c5c5779ad288ca7d84fb1bae7d9/thumb_md.png" />
+						</a>
+						<a href = "/jennie">
+							<img src="http://img.cla.co/b3c5c5cecfd64d447a0743ba8c9a6bf0/thumb_md.png" />
+						</a>
+						<a href = "/ddmeyer">
+							<img src="http://img.cla.co/f23fcf69ec3b387826c9fec7903fc271/thumb_md.png" />
+						</a>
+						<a href = "/cybraryman1">
+							<img src="http://img.cla.co/6075d7e401ac42d5ccedd04412635b48/thumb_md.png" />
+						</a>
+						<a href = "/j">
+							<img src="http://img.cla.co/0b633282bfe561a3b9a9cc9669eb2706/thumb_md.png" />
+						</a>
+						<a href = "/pronovost">
+							<img src="http://img.cla.co/27104719762e5dd5e957118cfa74786d/thumb_md.png" />
+						</a>
 
 					</div>
 
