--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -88,7 +88,7 @@
 
 	<div style="margin-top:-15px"></div>
 	
-	<% @feed.each do |f| %>
+	<% @subsfeed.each do |f| %>
 		<div class="newsitem">
 			<div class="imgarea">
 				<a href="<%= "/#{f[:owner].username}" %>">
