--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -4,7 +4,7 @@
 %>
 <div class="whitebox">
 
-	<% if current_teacher.getting_started && params[:controller] == "home" && params[:action] == "index" %>
+	<% if signed_in? && current_teacher.getting_started && params[:controller] == "home" && params[:action] == "index" %>
 
 			<div class="findppl">
 
