--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,6 +17,14 @@
               <% end %>
             </a>
 
+
+
+            <div class="searchWrap">
+              <input type="text" class="topSearch" placeholder="Search" />
+            </div>
+
+            
+
             <ul class="nav nav-pills pull-right" style="margin-left:0px">
               <li id="menuopttog" class="dropdown">
 
