--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -1,4 +1,78 @@
-<% # try to not write any more crappy code, boss
-%>
+<% content_for :headcon do %>
+	<%= javascript_include_tag "search/main" %>
+    <%= stylesheet_link_tag    "search/main", :media => "all" %>
+<% end %>
 
-TEST
+<div class="container">
+
+	<div class="leftbox">
+		<li class="active">
+			<a href="#">
+				<div class="titler">
+					Educators 
+
+					<div class="arrow">&#9654;</div>
+				</div>
+			</a>
+		</li>
+
+		<li>
+			<div class="titler">
+				Binders&nbsp;&nbsp;<span class="label label">coming soon!</span>
+
+				<div class="arrow">&#9654;</div>
+			</div>
+		</li>
+
+	</div>
+
+	<div class="mainbox">
+		<div class="headnounce">
+			Educators
+		</div>
+
+
+		<div class="listitem">
+			<a href="#">
+				<img src="http://img.cla.co/36deb7823aebac9267c1344b9e6db315/thumb_md.png" class="thumbster" />
+			</a>
+
+
+			<div class="infowrap">
+				<div class="bigtitle"><a href="#">Teresa Adams</a> <a href="#"><span class="uname">(tadams)</span></a></div>
+
+				<div class="biotxt">
+					Starting my fourth year as a 2nd grade teacher, love connecting with other classrooms around the world, use Daily 5, #2ndchat Twitter chat moderator.
+				</div>
+
+				<div class="medata">
+					<span>
+						<%= image_tag("profile/subject.png") %>
+						Mathematics
+					</span>
+					&nbsp;&nbsp;
+					<span>
+						<%= image_tag("profile/point.png", :style => "margin-right:0px") %>
+						Palo Alto, California, United States
+					</span>
+				</div>
+
+			</div>
+
+
+			<div class="actarea">
+				<a class="btn btn-medium subbtn" style="font-weight:bolder">
+		            <%= image_tag("profile/darkscribe.png", :style => "float:left;height:12px;margin:3px 5px 0 0") %>
+		            Subscribe
+		        </a>
+			</div>
+
+
+
+		<div style="clear:both"></div>
+		</div>
+
+
+
+	</div>
+</div>
