--- a/app/assets/stylesheets/search/main.css
+++ b/app/assets/stylesheets/search/main.css
@@ -133,12 +133,12 @@
 
 .mainbox .listitem .biotxt{
   font-size:13px;
-  color:#555;
+  color:#666;
   font-style: italic;
 }
 
 .mainbox .listitem .medata {
-  margin-top:10px;
+  margin-top:6px;
 }
 
 .mainbox .listitem .medata span{
@@ -149,6 +149,8 @@
 .mainbox .listitem .medata span img{
   margin-top:-4px;
   margin-right:3px;
+  opacity: 0.50;
+  filter: alpha(opacity=50);
 }
 
 .mainbox .listitem .actarea {
