--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,10 +20,12 @@
 
 
             <div class="searchWrap">
-              <input type="text" class="topSearch" placeholder="Search" />
+              <form method="GET" action="/search" style="margin:0">
+                <input type="text" name="q" class="topSearch" placeholder="Search" />
+              </form>
             </div>
 
-            
+
 
             <ul class="nav nav-pills pull-right" style="margin-left:0px">
               <li id="menuopttog" class="dropdown">
