--- a/app/assets/stylesheets/binders/folder.css
+++ b/app/assets/stylesheets/binders/folder.css
@@ -24,11 +24,43 @@
   border-bottom: 1px solid #B7B7B7;
 }
 
+.content-header .con-inner .myImgBox {
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 14px;
+  background: white;
+
+  margin:10px 30px 0 0px;
+  float:left;
+}
+
+
+.content-header .con-inner .myImgBox img {
+  width: 170px;
+  height: 170px;
+  display: block;
+  background: #ddd;
+  border-radius: 2px;
+}
+
+.content-header .con-inner .myImgBox .info {
+  border:1px dotted #ddd;
+  background: #f7f7f7;
+  text-align: center;
+  font-size: 16px;
+  margin-top: 5px;
+  border-radius: 2px;
+  padding: 5px;
+}
+
+.content-header .con-inner .myImgBox .info .namester{
+  color:#333;
+}
 
 .content-header .con-inner .crumbster {
   margin-top:15px;
   height:25px;
-  clear:both;
+
 }
 
 
