--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -136,7 +136,7 @@
         Subscribers 
       </h3>
       <ul class="profile-avatars">
-        <% @subscribers.shuffle[0..5].each do |sub| %>
+        <% @subscribers.shuffle.sort_by{|t| t.info.avatar.file.nil? ? 0 : 1}[0..5].each do |sub| %>
           <li>
             <a href="/<%= sub.username %>">
               <img src="<%= sub.info.avatar.thumb_md.url %>">
