--- a/app/views/layouts/_teacherlist.html.erb
+++ b/app/views/layouts/_teacherlist.html.erb
@@ -2,9 +2,12 @@
 	<% #if !signed_in? || (t.id.to_s != current_teacher.id.to_s)
 	%>
 	<div class="listitem">
+		<% if !t.info.nil? && !t.info.avatar.to_hash[:url].nil? #&& !t.info.avatar.empty? 
+			%>
 		<a href="<%= "/#{t.username}" %>">
-			<img src=<%= (!t.info.nil? && !t.info.avatar.nil?) ? t.info.avatar.thumb_md.url.to_s : "" %> class="thumbster" />
+			<img src=<%= t.info.avatar.thumb_md.url.to_s %> class="thumbster" />
 		</a>
+		<% end %>
 		<div class="infowrap">
 			<div class="bigtitle">
 				<a href="<%= "/#{t.username}" %>"><%= "#{t.fname} #{t.lname}" %></a> <a href="<%= "/#{t.username}" %>"><span class="uname">(<%= t.username.to_s %>)</span></a>
