--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
 			<hr>
 
 			<footer>
-			<p>&copy; Claco 2012</p>
+			<p>&copy; Claco 2012 <span style="float:right;font-size:11px"><a href="/legal/tos" target="_blank">Terms of Service</a> &bull; <a href="/legal/privacy" target="_blank">Privacy Policy</a></span></p>
 			</footer>
 		</div>
 
