--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Claco | <%= @title %></title>
+		<title><%= @title %></title>
 		<%= stylesheet_link_tag    "strap", :media => "all" %>
 		<%= stylesheet_link_tag    "application", :media => "all" %>
 		<%= stylesheet_link_tag    "box", :media => "all" %>
