--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -44,7 +44,7 @@
 						<a href = "/eric">
 							<img src="http://img.cla.co/d1a54b8f36e8bb677aa654b84b162961/thumb_md.png" />
 						</a>
-						<a href = "/klienerin">
+						<a href = "/kleinerin">
 							<img src="http://img.cla.co/30196e0ca58be4c89f26fcbf608262fb/thumb_md.png" />
 						</a>
 						<a href = "/ronpeck">
