--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -88,7 +88,11 @@
 
 	<div style="margin-top:-15px"></div>
 	
-	<% @subsfeed.each do |f| %>
+	<% @subsfeed.each do |f| 
+		# perform this transformation here, pushes calculation to
+		# feed views that actually need arrays
+		f = f.first if f.class==Array && f.size==1 %>
+	
 		<div class="newsitem">
 			<div class="imgarea">
 				<a href="<%= "/#{f[:owner].username}" %>">
