--- a/app/assets/stylesheets/home/main.css
+++ b/app/assets/stylesheets/home/main.css
@@ -150,11 +150,49 @@
 
 
 #newbinder {
-	font-weight:bolder;
-	font-size:14px;
-	width:250px;
-	padding: 7px 20px;
-	margin-top:-10px;
+position:absolute;
+	background-color: #649F2C;
+  *background-color: #649F2C;
+  background-image: -ms-linear-gradient(top, #B3D330, #649F2C);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#B3D330), to(#649F2C));
+  background-image: -webkit-linear-gradient(top, #B3D330, #649F2C);
+  background-image: -o-linear-gradient(top, #B3D330, #649F2C);
+  background-image: -moz-linear-gradient(top, #B3D330, #649F2C);
+  background-image: linear-gradient(top, #B3D330, #649F2C);
+  background-repeat: repeat-x;
+  border-color: rgba(133, 160, 31, 0.99) rgba(107, 140, 46, 0.99) rgba(78, 120, 138, 0.99);
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#B3D330', endColorstr='#649F2C', GradientType=0);
+  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+
+    border: 1px solid rgba(0, 0, 0, .2);
+    border-radius: 5px;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, .4) inset, 0 -2px 0 rgba(0, 0, 0, .3) inset, 0 0 10px rgba(255, 255, 255, .3) inset, 0 2px 4px rgba(0, 0, 0, .2);
+    -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, .4) inset, 0 -2px 0 rgba(0, 0, 0, .3) inset, 0 0 10px rgba(255, 255, 255, .3) inset, 0 2px 4px rgba(0, 0, 0, .2);
+    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, .4) inset, 0 -2px 0 rgba(0, 0, 0, .3) inset, 0 0 10px rgba(255, 255, 255, .3) inset, 0 2px 4px rgba(0, 0, 0, .2);
+    color: #fff;
+    display: block;    
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 0 -1px rgba(0, 0, 0, .2);
+    padding: 7px 10px 10px 10px;
+    width:200px;
+}
+
+#newbinder:hover {
+	background-color: #B3D330;
+    background-position: 0 15px;
+}
+#newbinder:active {
+	margin-top: 1px;
+    background-color: #649F2C;
+    background-position: 0 -15px;
+
+    padding: 7px 10px 9px 10px;
+
+    box-shadow: 0 1px 0 rgba(255, 255, 255, .2) inset, 0 -1px 0 rgba(0, 0, 0, .3) inset, 0 0 10px rgba(255, 255, 255, .2) inset, 0 2px 4px rgba(0, 0, 0, .2);
+    -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, .2) inset, 0 -1px 0 rgba(0, 0, 0, .3) inset, 0 0 10px rgba(255, 255, 255, .2) inset, 0 2px 4px rgba(0, 0, 0, .2);
+    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, .2) inset, 0 -1px 0 rgba(0, 0, 0, .3) inset, 0 0 10px rgba(255, 255, 255, .2) inset, 0 2px 4px rgba(0, 0, 0, .2);
 }
 
 
