--- a/app/views/home/_loggedin.html.erb
+++ b/app/views/home/_loggedin.html.erb
@@ -74,10 +74,11 @@
 
 		</div>
 
-		<button id="newbinder" class="btn">
-			<%= image_tag('common/plus.png', :style => "position:absolute;margin-left:-10px; margin-top:1px") %>
-			&nbsp;&nbsp;&nbsp;Create a new binder
+<div style="height:100px;margin-left:25px">
+		<button id="newbinder">
+			Create a new binder
 		</button>
+</div>
 
 <% if false %>
 		<div style="margin-top:30px;font-size:13px; font-weight:bolder">
