--- a/app/views/layouts/_feed.html.erb
+++ b/app/views/layouts/_feed.html.erb
@@ -384,15 +384,26 @@
 
 			<% when 'sub' %>
 
-				<% subscribee = Teacher.where(:username => f[:log].params['username'].to_s).first %>
+				<% subscribee = Teacher.where(:username => /#{Regexp.escape(f[:log].params['username'].to_s)}/i).first %>
 
 				<div class="feedcontent">
 					<div class="thetitle">
+						<% begin %>
 						<% if !current_teacher.nil? && current_teacher.id.to_s==f[:owner].id.to_s %>
 							You subscribed to <a href="<%= "/#{subscribee.username}" %>"><%= "#{subscribee.fname} #{subscribee.lname}" %></a> <%= time_ago_in_words(Time.at(f[:log]['timestamp']).to_datetime) %> ago.
 						<% else %>
-							<a href="<%= "/#{f[:owner].username}" %>"><%= "#{f[:owner].fname} #{f[:owner].lname}" %></a> subscribed to <a href="<%= "/#{subscribee.username}" %>"><%= "#{subscribee.fname} #{subscribee.lname}" %></a> <%= time_ago_in_words(Time.at(f[:log]['timestamp']).to_datetime) %> ago.
+							<a href="<%= "/#{f[:owner].username}" %>">
+								<%= "#{f[:owner].fname} #{f[:owner].lname}" %>
+							</a> subscribed to 
+							<a href="<%= "/#{subscribee.username}" %>">
+								<%= "#{subscribee.fname} #{subscribee.lname}" %>
+							</a> 
+							<%= time_ago_in_words(Time.at(f[:log]['timestamp']).to_datetime) %> ago.
 						<% end %>
+						<% rescue 
+							debugger
+						end
+						%>
 					</div>
 
 					<a href="<%= "/#{subscribee.username}" %>" class="conlink">
